fix editing problem with zurb foundation css

--- a/concrete5/themes/olive_sample/main.css
+++ b/concrete5/themes/olive_sample/main.css
@@ -7,6 +7,12 @@
 /**
  * Override Foundation styles
  */
+body{
+	position: inherit;
+}
+.page {
+	position: relative;
+}
 .page a:hover {
 	text-decoration: underline;
 }
