--- a/concrete5/blocks/google_map/templates/small/view.css
+++ b/concrete5/blocks/google_map/templates/small/view.css
@@ -1,1 +1,1 @@
-.googleMapCanvas{ width:100%; border:0px none; height: 400px;}
+.googleMapCanvasSmall{ width:100%; height: 250px; padding: 0 !important;}
