--- a/style.css
+++ b/style.css
@@ -36,6 +36,23 @@ body {
 	background: #eee;
 }
 
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+- See more at: http://avexdesigns.com/responsive-youtube-embed/#sthash.m9LWamj9.dpuf
+
 @media (min-width:768px) {
 	.container .jumbotron header {
 		padding: 10px 60px;
