--- a/concrete5/themes/olive_sample/main.css
+++ b/concrete5/themes/olive_sample/main.css
@@ -3,6 +3,11 @@
  */
 body{
 	position: inherit;
+	/* customize_body-background */ background-color: #fff; /* customize_body-background */
+	/* customize_body-text */ color: #666; /* customize_body-text */
+}
+.row {
+	background-color: #fff;
 }
 .page {
 	position: relative;
@@ -10,16 +15,6 @@ body{
 .page a:hover {
 	text-decoration: underline;
 }
-.page h1, .page h2, .page h3,
-.page h4, .page h5, .page h6 {
-	font-weight: bold;
-	color: #5e7a36;
-}
-h1 { font-size: 24px; margin-bottom: 1em; }
-h2 { font-size: 18px; padding-bottom: .2em; border-bottom: 1px solid #698a3e; }
-h3 { font-size: 16px; padding-bottom: .2em; border-bottom: 1px solid #698a3e; }
-h4 { font-size: 15px; }
-h5, h6 { font-size: 14px; }
 .clearfix:before, .clearfix:after,
 .main-content-thumb:before, .main-content-thumb:after {
 	content: "";
@@ -31,6 +26,12 @@ h5, h6 { font-size: 14px; }
 }
 .clearfix, .main-content-thumb {
 	*zoom: 1;
+}
+a {
+	/* customize_link */ color: #6b8b39; /* customize_link */
+}
+a:hover,a:focus {
+    /* customize_link-hover */ color: #5d7932; /* customize_link-hover */
 }
 
 /**
@@ -90,7 +91,7 @@ h5, h6 { font-size: 14px; }
 	margin: 0;
 }
 .page .ccm-search-block-form .ccm-search-block-submit {
-	background: #8f8174;
+	/* customize_submit-button */ background-color: #8f8174; /* customize_submit-button */
 	border: none;
 	color: white;
 	font-size: 13px;
@@ -116,15 +117,15 @@ h5, h6 { font-size: 14px; }
 	padding: 8px 0;
 }
 ul.breadcrumbs {
-	background: #f8f5f1;
-	border-color: #efece9;
+	/* customize_breadcrumb-background */ background-color: #f8f5f1; /* customize_breadcrumb-background */
+	/* customize_breadcrumb-border */ border-color: #efece9; /* customize_breadcrumb-border */
 	margin-bottom: 24px;
 }
 ul.breadcrumbs a:link, ul.breadcrumbs a:visited {
-	color: #6c8c3b;
+	/* customize_breadcrumb-visited */ color: #6c8c3b; /* customize_breadcrumb-visited */
 }
 ul.breadcrumbs a:hover, ul.breadcrumbs a:active {
-	color: #ff8b02;
+	/* customize_breadcrumb-active */ color: #ff8b02; /* customize_breadcrumb-active */
 }
 ul.breadcrumbs li {
 	background: transparent url(images/breadcrumbs_arrow.png) no-repeat center right;
@@ -195,7 +196,7 @@ ul.breadcrumbs li a, ul.breadcrumbs li span {
 }
 .page .read-more a:hover {
 	background-position-y: -45px;
-	color: #ff8b02;
+	/* customize_readmore */ color: #ff8b02; /* customize_readmore */
 }
 .main-content-thumb h4 {
 	margin-top: 0;
@@ -311,3 +312,5 @@ ul.breadcrumbs li a, ul.breadcrumbs li span {
 		margin-bottom: 10px;
 	}
 }
+
+/* customize_miscellaneous */ /* customize_miscellaneous */
